--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        <h1>Welcome to Symfony!</h1>
+
         {% block body %}{% endblock %}
     </body>
 </html>
