--- a/templates/social_post/index.html.twig
+++ b/templates/social_post/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SocialPostController!{% endblock %}
+{% block title %}All Posts{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div>
+        {% if socialPosts|length > 0 %}
+            {% for post in socialPosts %}
+                <div>
+                    <a href="{{path('app_social_post_show', {socialPost:post.id})}}">{{post.title}}</a>
+                    {{post.title}}
+                </div>
+            {% endfor %}
+        {% else %}
+            Nothing Here!
+        {% endif %}
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/egidio/Documenti/Projects/Symfony6/Symfony/src/Controller/SocialPostController.php'|file_link(0) }}">src/Controller/SocialPostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/egidio/Documenti/Projects/Symfony6/Symfony/templates/social_post/index.html.twig'|file_link(0) }}">templates/social_post/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
