--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+        <h1>Study a Social with Symfony</h1>
+
+        {% for message in app.flashes('success') %}
+            <div style="color:green">{{ message }}</div>
+        {% endfor %}
 
         {% block body %}{% endblock %}
     </body>
